// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table should render basic table 1`] = `
<div>
  <table
    class="av-grid table"
    role="table"
  >
    <thead
      class="av-grid-row-header"
      id="table_header"
    >
      <tr
        data-testid="table_header_row_0"
        id="table_header_row_0"
        role="row"
      >
        <th
          colspan="1"
          data-testid="table_header_row_0_cell_0_first_name"
          id="table_header_row_0_cell_0_first_name"
          role="columnheader"
          style="cursor: pointer;"
          title="First Name"
        >
          First Name
        </th>
        <th
          colspan="1"
          data-testid="table_header_row_0_cell_1_last_name"
          id="table_header_row_0_cell_1_last_name"
          role="columnheader"
          style="cursor: pointer;"
          title="Last Name"
        >
          Last Name
        </th>
        <th
          colspan="1"
          data-testid="table_header_row_0_cell_2_email"
          id="table_header_row_0_cell_2_email"
          role="columnheader"
          style="cursor: pointer;"
          title="Email"
        >
          Email
        </th>
      </tr>
    </thead>
    <tbody
      role="rowgroup"
    >
      <tr
        class="av-grid-row-even"
        data-testid="table_row_0"
        id="table_row_0"
        role="row"
      >
        <td
          data-testid="table_row_0_cell_0"
          id="table_row_0_cell_0"
          role="cell"
          title="Barbra"
        >
          Barbra
        </td>
        <td
          data-testid="table_row_0_cell_1"
          id="table_row_0_cell_1"
          role="cell"
          title="Tull"
        >
          Tull
        </td>
        <td
          data-testid="table_row_0_cell_2"
          id="table_row_0_cell_2"
          role="cell"
          title="btull0@usatoday.com"
        >
          btull0@usatoday.com
        </td>
      </tr>
      <tr
        class="av-grid-row-odd"
        data-testid="table_row_1"
        id="table_row_1"
        role="row"
      >
        <td
          data-testid="table_row_1_cell_0"
          id="table_row_1_cell_0"
          role="cell"
          title="Karlis"
        >
          Karlis
        </td>
        <td
          data-testid="table_row_1_cell_1"
          id="table_row_1_cell_1"
          role="cell"
          title="Yurshev"
        >
          Yurshev
        </td>
        <td
          data-testid="table_row_1_cell_2"
          id="table_row_1_cell_2"
          role="cell"
          title="kyurshev1@spotify.com"
        >
          kyurshev1@spotify.com
        </td>
      </tr>
      <tr
        class="av-grid-row-even"
        data-testid="table_row_2"
        id="table_row_2"
        role="row"
      >
        <td
          data-testid="table_row_2_cell_0"
          id="table_row_2_cell_0"
          role="cell"
          title="Bordie"
        >
          Bordie
        </td>
        <td
          data-testid="table_row_2_cell_1"
          id="table_row_2_cell_1"
          role="cell"
          title="Marsy"
        >
          Marsy
        </td>
        <td
          data-testid="table_row_2_cell_2"
          id="table_row_2_cell_2"
          role="cell"
          title="bmarsy2@elegantthemes.com"
        >
          bmarsy2@elegantthemes.com
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Table should render selectable table 1`] = `
<div>
  <table
    class="av-grid table"
    role="table"
  >
    <thead
      class="av-grid-row-header"
      id="table_header"
    >
      <tr
        data-testid="table_header_row_0"
        id="table_header_row_0"
        role="row"
      >
        <th
          class="fixed-width-selection"
          colspan="1"
          data-testid="table_header_row_0_cell_0_selection"
          id="table_header_row_0_cell_0_selection"
          role="columnheader"
        >
          <div
            class="text-center"
          >
            <label
              class="custom-control custom-checkbox"
            >
              <input
                aria-label="Select all records"
                class="custom-control-input"
                data-testid="table_header_select_all"
                style="cursor: pointer;"
                title="Toggle All Rows Selected"
                type="checkbox"
              />
              <span
                class="custom-control-label"
              />
            </label>
          </div>
        </th>
        <th
          colspan="1"
          data-testid="table_header_row_0_cell_1_first_name"
          id="table_header_row_0_cell_1_first_name"
          role="columnheader"
          style="cursor: pointer;"
          title="First Name"
        >
          First Name
        </th>
        <th
          colspan="1"
          data-testid="table_header_row_0_cell_2_last_name"
          id="table_header_row_0_cell_2_last_name"
          role="columnheader"
          style="cursor: pointer;"
          title="Last Name"
        >
          Last Name
        </th>
        <th
          colspan="1"
          data-testid="table_header_row_0_cell_3_email"
          id="table_header_row_0_cell_3_email"
          role="columnheader"
          style="cursor: pointer;"
          title="Email"
        >
          Email
        </th>
      </tr>
    </thead>
    <tbody
      role="rowgroup"
    >
      <tr
        class="av-grid-row-even"
        data-testid="table_row_0"
        id="table_row_0"
        role="row"
      >
        <td
          class="fixed-width-selection"
          data-testid="table_row_0_cell_0"
          id="table_row_0_cell_0"
          role="cell"
        >
          <div
            class="text-center"
          >
            <label
              class="custom-control custom-checkbox"
            >
              <input
                aria-label="Select record"
                class="custom-control-input"
                data-testid="table_header_select_row_0"
                style="cursor: pointer;"
                title="Toggle Row Selected"
                type="checkbox"
              />
              <span
                class="custom-control-label"
              />
            </label>
          </div>
        </td>
        <td
          data-testid="table_row_0_cell_1"
          id="table_row_0_cell_1"
          role="cell"
          title="Barbra"
        >
          Barbra
        </td>
        <td
          data-testid="table_row_0_cell_2"
          id="table_row_0_cell_2"
          role="cell"
          title="Tull"
        >
          Tull
        </td>
        <td
          data-testid="table_row_0_cell_3"
          id="table_row_0_cell_3"
          role="cell"
          title="btull0@usatoday.com"
        >
          btull0@usatoday.com
        </td>
      </tr>
      <tr
        class="av-grid-row-odd"
        data-testid="table_row_1"
        id="table_row_1"
        role="row"
      >
        <td
          class="fixed-width-selection"
          data-testid="table_row_1_cell_0"
          id="table_row_1_cell_0"
          role="cell"
        >
          <div
            class="text-center"
          >
            <label
              class="custom-control custom-checkbox"
            >
              <input
                aria-label="Select record"
                class="custom-control-input"
                data-testid="table_header_select_row_1"
                style="cursor: pointer;"
                title="Toggle Row Selected"
                type="checkbox"
              />
              <span
                class="custom-control-label"
              />
            </label>
          </div>
        </td>
        <td
          data-testid="table_row_1_cell_1"
          id="table_row_1_cell_1"
          role="cell"
          title="Karlis"
        >
          Karlis
        </td>
        <td
          data-testid="table_row_1_cell_2"
          id="table_row_1_cell_2"
          role="cell"
          title="Yurshev"
        >
          Yurshev
        </td>
        <td
          data-testid="table_row_1_cell_3"
          id="table_row_1_cell_3"
          role="cell"
          title="kyurshev1@spotify.com"
        >
          kyurshev1@spotify.com
        </td>
      </tr>
      <tr
        class="av-grid-row-even"
        data-testid="table_row_2"
        id="table_row_2"
        role="row"
      >
        <td
          class="fixed-width-selection"
          data-testid="table_row_2_cell_0"
          id="table_row_2_cell_0"
          role="cell"
        >
          <div
            class="text-center"
          >
            <label
              class="custom-control custom-checkbox"
            >
              <input
                aria-label="Select record"
                class="custom-control-input"
                data-testid="table_header_select_row_2"
                style="cursor: pointer;"
                title="Toggle Row Selected"
                type="checkbox"
              />
              <span
                class="custom-control-label"
              />
            </label>
          </div>
        </td>
        <td
          data-testid="table_row_2_cell_1"
          id="table_row_2_cell_1"
          role="cell"
          title="Bordie"
        >
          Bordie
        </td>
        <td
          data-testid="table_row_2_cell_2"
          id="table_row_2_cell_2"
          role="cell"
          title="Marsy"
        >
          Marsy
        </td>
        <td
          data-testid="table_row_2_cell_3"
          id="table_row_2_cell_3"
          role="cell"
          title="bmarsy2@elegantthemes.com"
        >
          bmarsy2@elegantthemes.com
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Table should render sortable table 1`] = `
<div>
  <table
    class="av-grid table"
    role="table"
  >
    <thead
      class="av-grid-row-header"
      id="table_header"
    >
      <tr
        data-testid="table_header_row_0"
        id="table_header_row_0"
        role="row"
      >
        <th
          colspan="1"
          data-testid="table_header_row_0_cell_0_first_name"
          id="table_header_row_0_cell_0_first_name"
          role="columnheader"
          style="cursor: pointer;"
          title="First Name"
        >
          First Name
        </th>
        <th
          colspan="1"
          data-testid="table_header_row_0_cell_1_last_name"
          id="table_header_row_0_cell_1_last_name"
          role="columnheader"
          style="cursor: pointer;"
          title="Last Name"
        >
          Last Name
        </th>
        <th
          colspan="1"
          data-testid="table_header_row_0_cell_2_email"
          id="table_header_row_0_cell_2_email"
          role="columnheader"
          style="cursor: pointer;"
          title="Email"
        >
          Email
        </th>
      </tr>
    </thead>
    <tbody
      role="rowgroup"
    >
      <tr
        class="av-grid-row-even"
        data-testid="table_row_0"
        id="table_row_0"
        role="row"
      >
        <td
          data-testid="table_row_0_cell_0"
          id="table_row_0_cell_0"
          role="cell"
          title="Barbra"
        >
          Barbra
        </td>
        <td
          data-testid="table_row_0_cell_1"
          id="table_row_0_cell_1"
          role="cell"
          title="Tull"
        >
          Tull
        </td>
        <td
          data-testid="table_row_0_cell_2"
          id="table_row_0_cell_2"
          role="cell"
          title="btull0@usatoday.com"
        >
          btull0@usatoday.com
        </td>
      </tr>
      <tr
        class="av-grid-row-odd"
        data-testid="table_row_1"
        id="table_row_1"
        role="row"
      >
        <td
          data-testid="table_row_1_cell_0"
          id="table_row_1_cell_0"
          role="cell"
          title="Karlis"
        >
          Karlis
        </td>
        <td
          data-testid="table_row_1_cell_1"
          id="table_row_1_cell_1"
          role="cell"
          title="Yurshev"
        >
          Yurshev
        </td>
        <td
          data-testid="table_row_1_cell_2"
          id="table_row_1_cell_2"
          role="cell"
          title="kyurshev1@spotify.com"
        >
          kyurshev1@spotify.com
        </td>
      </tr>
      <tr
        class="av-grid-row-even"
        data-testid="table_row_2"
        id="table_row_2"
        role="row"
      >
        <td
          data-testid="table_row_2_cell_0"
          id="table_row_2_cell_0"
          role="cell"
          title="Bordie"
        >
          Bordie
        </td>
        <td
          data-testid="table_row_2_cell_1"
          id="table_row_2_cell_1"
          role="cell"
          title="Marsy"
        >
          Marsy
        </td>
        <td
          data-testid="table_row_2_cell_2"
          id="table_row_2_cell_2"
          role="cell"
          title="bmarsy2@elegantthemes.com"
        >
          bmarsy2@elegantthemes.com
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Table should render with expected ids 1`] = `
<div>
  <table
    class="av-grid table"
    id="my_availity_table"
    role="table"
  >
    <thead
      class="av-grid-row-header"
      id="my_availity_table_table_header"
    >
      <tr
        data-testid="my_availity_table_table_header_row_0"
        id="my_availity_table_table_header_row_0"
        role="row"
      >
        <th
          colspan="1"
          data-testid="my_availity_table_table_header_row_0_cell_0_first_name"
          id="my_availity_table_table_header_row_0_cell_0_first_name"
          role="columnheader"
          style="cursor: pointer;"
          title="First Name"
        >
          First Name
        </th>
        <th
          colspan="1"
          data-testid="my_availity_table_table_header_row_0_cell_1_last_name"
          id="my_availity_table_table_header_row_0_cell_1_last_name"
          role="columnheader"
          style="cursor: pointer;"
          title="Last Name"
        >
          Last Name
        </th>
        <th
          colspan="1"
          data-testid="my_availity_table_table_header_row_0_cell_2_email"
          id="my_availity_table_table_header_row_0_cell_2_email"
          role="columnheader"
          style="cursor: pointer;"
          title="Email"
        >
          Email
        </th>
      </tr>
    </thead>
    <tbody
      role="rowgroup"
    >
      <tr
        class="av-grid-row-even"
        data-testid="my_availity_table_table_row_0"
        id="my_availity_table_table_row_0"
        role="row"
      >
        <td
          data-testid="my_availity_table_table_row_0_cell_0"
          id="my_availity_table_table_row_0_cell_0"
          role="cell"
          title="Barbra"
        >
          Barbra
        </td>
        <td
          data-testid="my_availity_table_table_row_0_cell_1"
          id="my_availity_table_table_row_0_cell_1"
          role="cell"
          title="Tull"
        >
          Tull
        </td>
        <td
          data-testid="my_availity_table_table_row_0_cell_2"
          id="my_availity_table_table_row_0_cell_2"
          role="cell"
          title="btull0@usatoday.com"
        >
          btull0@usatoday.com
        </td>
      </tr>
      <tr
        class="av-grid-row-odd"
        data-testid="my_availity_table_table_row_1"
        id="my_availity_table_table_row_1"
        role="row"
      >
        <td
          data-testid="my_availity_table_table_row_1_cell_0"
          id="my_availity_table_table_row_1_cell_0"
          role="cell"
          title="Karlis"
        >
          Karlis
        </td>
        <td
          data-testid="my_availity_table_table_row_1_cell_1"
          id="my_availity_table_table_row_1_cell_1"
          role="cell"
          title="Yurshev"
        >
          Yurshev
        </td>
        <td
          data-testid="my_availity_table_table_row_1_cell_2"
          id="my_availity_table_table_row_1_cell_2"
          role="cell"
          title="kyurshev1@spotify.com"
        >
          kyurshev1@spotify.com
        </td>
      </tr>
      <tr
        class="av-grid-row-even"
        data-testid="my_availity_table_table_row_2"
        id="my_availity_table_table_row_2"
        role="row"
      >
        <td
          data-testid="my_availity_table_table_row_2_cell_0"
          id="my_availity_table_table_row_2_cell_0"
          role="cell"
          title="Bordie"
        >
          Bordie
        </td>
        <td
          data-testid="my_availity_table_table_row_2_cell_1"
          id="my_availity_table_table_row_2_cell_1"
          role="cell"
          title="Marsy"
        >
          Marsy
        </td>
        <td
          data-testid="my_availity_table_table_row_2_cell_2"
          id="my_availity_table_table_row_2_cell_2"
          role="cell"
          title="bmarsy2@elegantthemes.com"
        >
          bmarsy2@elegantthemes.com
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Table should render with formatted cells 1`] = `
<div>
  <table
    class="av-grid table"
    role="table"
  >
    <thead
      class="av-grid-row-header"
      id="table_header"
    >
      <tr
        data-testid="table_header_row_0"
        id="table_header_row_0"
        role="row"
      >
        <th
          colspan="1"
          data-testid="table_header_row_0_cell_0_text"
          id="table_header_row_0_cell_0_text"
          role="columnheader"
          style="cursor: pointer;"
          title="Basic Text"
        >
          Basic Text
        </th>
        <th
          colspan="1"
          data-testid="table_header_row_0_cell_1_currency"
          id="table_header_row_0_cell_1_currency"
          role="columnheader"
          style="cursor: pointer;"
          title="Currency"
        >
          Currency
        </th>
        <th
          colspan="1"
          data-testid="table_header_row_0_cell_2_badge"
          id="table_header_row_0_cell_2_badge"
          role="columnheader"
          style="cursor: pointer;"
          title="Badge"
        >
          Badge
        </th>
        <th
          colspan="1"
          data-testid="table_header_row_0_cell_3_icon"
          id="table_header_row_0_cell_3_icon"
          role="columnheader"
          style="cursor: pointer;"
          title="Icon"
        >
          Icon
        </th>
        <th
          colspan="1"
          data-testid="table_header_row_0_cell_4_date"
          id="table_header_row_0_cell_4_date"
          role="columnheader"
          style="cursor: pointer;"
          title="Date"
        >
          Date
        </th>
        <th
          colspan="1"
          data-testid="table_header_row_0_cell_5_actions"
          id="table_header_row_0_cell_5_actions"
          role="columnheader"
          title="Actions"
        >
          Actions
        </th>
      </tr>
    </thead>
    <tbody
      role="rowgroup"
    >
      <tr
        class="av-grid-row-even"
        data-testid="table_row_0"
        id="table_row_0"
        role="row"
      >
        <td
          data-testid="table_row_0_cell_0"
          id="table_row_0_cell_0"
          role="cell"
          title="My Text Field"
        >
          My Text Field
        </td>
        <td
          data-testid="table_row_0_cell_1"
          id="table_row_0_cell_1"
          role="cell"
          title="43.08"
        >
          <span
            title="$43.08"
          >
            $43.08
          </span>
        </td>
        <td
          data-testid="table_row_0_cell_2"
          id="table_row_0_cell_2"
          role="cell"
          title="badge field"
        >
          <p
            class="badge badge-success"
            title="badge field"
          >
            badge field
          </p>
        </td>
        <td
          data-testid="table_row_0_cell_3"
          id="table_row_0_cell_3"
          role="cell"
          title="true"
        >
          <i
            aria-hidden="true"
            class="icon icon-doc-alt"
            title="View Notes"
          />
        </td>
        <td
          data-testid="table_row_0_cell_4"
          id="table_row_0_cell_4"
          role="cell"
          title="1956-02-16T05:00:00.000+0000"
        >
          <span
            title="02/16/1956"
          >
            02/16/1956
          </span>
        </td>
        <td
          data-testid="table_row_0_cell_5"
          id="table_row_0_cell_5"
          role="cell"
        >
          <div
            class="dropdown-action-menu dropleft dropdown"
            id="table_row_action_menu_1"
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              class="btn btn-ghost btn btn-secondary"
              data-boundary="viewport"
              id="table_row_action_menu_1_dropdown_toggle"
              type="button"
            >
              <i
                class="icon icon-menu"
                id="table_row_action_menu_1_dropdown_toggle_icon"
              />
            </button>
            <div
              aria-hidden="true"
              class="dropdown-action-menu dropdown-menu"
              id="table_row_action_menu_1_dropdown_toggle_icon"
              role="menu"
              tabindex="-1"
            >
              <button
                class="dropdown-item"
                id="table_row_action_menu_item_0_action_action1"
                role="menuitem"
                tabindex="0"
                type="button"
              >
                Action 1
              </button>
              <button
                class="dropdown-item"
                id="table_row_action_menu_item_1_action_action2"
                role="menuitem"
                tabindex="0"
                type="button"
              >
                Action 2
              </button>
            </div>
          </div>
        </td>
      </tr>
      <tr
        class="av-grid-row-odd"
        data-testid="table_row_1"
        id="table_row_1"
        role="row"
      >
        <td
          data-testid="table_row_1_cell_0"
          id="table_row_1_cell_0"
          role="cell"
          title="My Text Field"
        >
          My Text Field
        </td>
        <td
          data-testid="table_row_1_cell_1"
          id="table_row_1_cell_1"
          role="cell"
          title="43.08"
        >
          <span
            title="$43.08"
          >
            $43.08
          </span>
        </td>
        <td
          data-testid="table_row_1_cell_2"
          id="table_row_1_cell_2"
          role="cell"
          title="badge field"
        >
          <p
            class="badge badge-success"
            title="badge field"
          >
            badge field
          </p>
        </td>
        <td
          data-testid="table_row_1_cell_3"
          id="table_row_1_cell_3"
          role="cell"
        />
        <td
          data-testid="table_row_1_cell_4"
          id="table_row_1_cell_4"
          role="cell"
          title="1990-02-16T05:00:00.000+0000"
        >
          <span
            title="02/16/1990"
          >
            02/16/1990
          </span>
        </td>
        <td
          data-testid="table_row_1_cell_5"
          id="table_row_1_cell_5"
          role="cell"
        >
          <div
            class="dropdown-action-menu dropleft dropdown"
            id="table_row_action_menu_2"
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              class="btn btn-ghost btn btn-secondary"
              data-boundary="viewport"
              id="table_row_action_menu_2_dropdown_toggle"
              type="button"
            >
              <i
                class="icon icon-menu"
                id="table_row_action_menu_2_dropdown_toggle_icon"
              />
            </button>
            <div
              aria-hidden="true"
              class="dropdown-action-menu dropdown-menu"
              id="table_row_action_menu_2_dropdown_toggle_icon"
              role="menu"
              tabindex="-1"
            >
              <button
                class="dropdown-item"
                id="table_row_action_menu_item_0_action_action1"
                role="menuitem"
                tabindex="0"
                type="button"
              >
                Action 1
              </button>
              <button
                class="dropdown-item"
                id="table_row_action_menu_item_1_action_action2"
                role="menuitem"
                tabindex="0"
                type="button"
              >
                Action 2
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
